--- a/style.css
+++ b/style.css
@@ -128,6 +128,35 @@ section.becauseWe > .center > p{
     margin-bottom: 20px;
 }
 
+section.cta{
+    background-image: url(images/banner_meio.svg);
+    padding: 20px 10px;
+    min-height: 200px;
+    background-size: cover;
+    background-position: center;
+    color: white;
+    text-align: center;
+}
+
+section.cta h2, section.cta h4{
+    font-weight: normal;
+    margin: 10px 0;
+}
+
+section.cta h2{
+    font-size: 40px;
+}
+
+section.cta a{
+    display: inline-block;
+    border-radius: 7px;
+    padding: 8px 15px;
+    font-weight: bold;
+    font-size: 17px;
+    background-color: #FFDD33;
+    text-decoration: none;
+    color: #0F3FD3;
+}
 @media screen and (max-width: 768px){
     .differentials{
         flex-wrap: wrap;      
