--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ section.cta h2, section.cta h4{
 section.cta h2{
     font-size: 40px;
 }
-
+/* a */
 section.cta a{
     display: inline-block;
     border-radius: 7px;
